--- a/Metabolite.batch4_age_assoc_no_EL_final.Rmd
+++ b/Metabolite.batch4_age_assoc_no_EL_final.Rmd
@@ -20,6 +20,7 @@ setwd("where you work")
 dir() 
 llfs.pheno.dir <-  where phenotypic data is
 llfs.metab4.dir <- where lipidomic data is
+annot.dir <- where annotation file is
 library(readxl)
 library(dplyr)
 library(ggplot2)
